syntax = "proto3";
package iot;
option go_package = "procodus.dev/demo-app/pkg/iot";

message SensorReading {
  string device_id = 1;
  int64 timestamp = 2;  // Unix timestamp
  double temperature = 3;
  double humidity = 4;
  double pressure = 5;
  double battery_level = 6;
}